<resources>
    <string name="app_name">Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="movie_card_backdrop_image_view_description">Movie backdrop image</string>

    <string name="title_activity_movie_list_favorites">Your Favorite Movies</string>
    <string name="title_activity_movie_detail">Movie Detail</string>

    <string name="action_sort">Sort</string>
    <string name="action_sort_popularity">Sort by popularity</string>
    <string name="action_sort_rating">Sort by rating</string>
    <string name="action_filter_favorites">Your favorites</string>

    <string name="movie_detail_rating">Rating: %.1f/10.0</string>
    <string name="movie_detail_videos_header">Trailers</string>
    <string name="movie_detail_open_trailer_button_text">Start trailer #%s</string>
    <string name="movie_detail_reviews_header">Reviews</string>
    <string name="movie_detail_poster_image_view_description">Movie poster</string>
    <string name="movie_detail_favorite_image_view_description">Toggle favorite button</string>
    <string name="movie_detail_overview_header">Summary</string>



    <string name="API_KEY">
        5ca4832f8fb046a46eee78fc5d44d789
    </string>

    <string name="player_error">Error initializing YouTube player</string>

</resources>
